# agg-font-freetype

./: meson.build
include/: agg_font_freetype.h
src/: agg_font_freetype.cpp  meson.build
test/: freetype_lcd.cpp  meson.build
